--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.0",
     "sequelize": "^6.28.2"
   }
